add deploy config

--- a/_config.yml
+++ b/_config.yml
@@ -102,4 +102,7 @@ theme: minima
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repo: git@github.com:ngtercet/ngtercet.github.io.git
+  branch: main
+  message: Auto deploy via Github Action
