--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
 
       - name: Checkout to main
+        with:
+          submodules: recursive
         uses: actions/checkout@v2
 
       - name: Setup Node
