--- a/themes/minima/_config.yml
+++ b/themes/minima/_config.yml
@@ -3,15 +3,15 @@ title: "Hi Folks."
 
 #main info
 #owner
-owner: "I am Adi Sakti Jrs"
-email: test@test.test
-info: "A student and web developer from Indonesia 🇮🇩"
+owner: "I am Jaron"
+email: ngtercet@protonmail.com
+info: "A developer from China"
 #description
-desc: "This is Minima, an undoubtedly simple and lightweight dark/light mode theme for Hexo. I created this from scratch using Skeleton CSS boilerplate. It only uses CSS and Vanilla JS, without using unnecessary third-party 'render-blocking' libraries! 😁"
+desc: "This is my blog, recording some random thoughts"
 
 #menu
 menu:
-  Works: /Works
+  Archive: /archives
   About: /About
 
 #index/main page max show posts (in number)
@@ -30,11 +30,12 @@ usercss: css/user.css
 footer: true
 placename: Earth
 placelink: https://en.wikipedia.org/wiki/Earth
-github: https://github.com/adisaktijrs
-linkedin: https://linkedin.com/in/adisaktijrs
-twitter: https://twitter.com/adisaktijrs
-instagram: https://instagram.com/adisaktijrs
-stackoverflow: https://stackoverflow.com/story/tobiasreithmeier
+github: https://github.com/ngtercet
+# linkedin:
+# twitter:
+# instagram:
+stackoverflow: https://stackoverflow.com/users/11571735/ngtercet
+zhihu: https://www.zhihu.com/people/innun
 
 # Misc
 nanobar: /js/nanobar.min.js
