--- a/themes/minima/_config.yml
+++ b/themes/minima/_config.yml
@@ -53,3 +53,6 @@ article:
 # DISQUS comments (sign up to Disqus to get disqus_shortname)
 disqus_enabled: false
 disqus_shortname: https-adisaktijrs-github-io
+
+
+cc: /images/by-nc-sa.svg
