--- a/themes/minima/_config.yml
+++ b/themes/minima/_config.yml
@@ -12,7 +12,8 @@ desc: "This is my blog, recording some random thoughts"
 #menu
 menu:
   Archive: /archives
-  About: /About
+  Tags: /tags
+  About: /about
 
 #index/main page max show posts (in number)
 max_post: 4
