--- a/themes/minima/_config.yml
+++ b/themes/minima/_config.yml
@@ -1,13 +1,13 @@
 #title in header
-title: "Hi Folks."
+title: Jaron
 
 #main info
 #owner
-owner: "I am Jaron"
+owner: Welcome and have fun :D
 email: ngtercet@protonmail.com
-info: "A developer from China"
+info: 
 #description
-desc: "This is my blog, recording some random thoughts"
+desc: 
 
 #menu
 menu:
