--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Checkout to main
         with:
           submodules: recursive
+          fetch-depth: 0
         uses: actions/checkout@v2
 
       - name: Setup Node
