--- a/themes/minima/_config.yml
+++ b/themes/minima/_config.yml
@@ -1,5 +1,5 @@
 #title in header
-title: Jaron
+title: ngtrio.me
 
 #main info
 #owner
@@ -31,7 +31,7 @@ usercss: css/user.css
 footer: true
 placename: Earth
 placelink: https://en.wikipedia.org/wiki/Earth
-github: https://github.com/ngtercet
+github: https://github.com/ngtrio
 # linkedin:
 # twitter:
 # instagram:
