--- a/themes/minima/_config.yml
+++ b/themes/minima/_config.yml
@@ -4,7 +4,7 @@ title: ngtrio.me
 #main info
 #owner
 owner: Welcome and have fun :D
-email: ngtercet@protonmail.com
+email: ngtrio@protonmail.com
 info: 
 #description
 desc: 
