--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -21,7 +21,7 @@ jobs:
           SHOW_OS : True
           SHOW_PROJECTS : False
           SHOW_TIMEZONE : False
-          SHOW_EDITORS : True 
+          SHOW_EDITORS : False 
           SHOW_LANGUAGE_PER_REPO : False
           SHOW_SHORT_INFO : False
           SHOW_LOC_CHART : False
