--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -18,7 +18,7 @@ jobs:
           SHOW_COMMIT : False
           SHOW_DAYS_OF_WEEK : False
           SHOW_LANGUAGE : True
-          SHOW_OS : True
+          SHOW_OS : False
           SHOW_PROJECTS : False
           SHOW_TIMEZONE : False
           SHOW_EDITORS : False 
